--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -1,4 +1,57 @@
-div {
-  color: #51a87d;
-  transform: translate(10px, 10px);
+// div {
+//   color: #51a87d;
+//   transform: translate(10px, 10px);
+// }
+
+body {
+  padding: 0px;
+  margin: 0px;
+}
+
+.body-container {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: repeat(autofit, minmax(100px, 1fr));
+  grid-template-areas: 'sidebar main';
+}
+
+.main-container {
+  grid-area: main;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 20px;
+  grid-gap: 5px;
+
+  :first-child {
+    grid-area: 1 / 1 / 3 / 3;
+  }
+}
+
+.card {
+  background-color: #444;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: -1px 0px 0px rgba(0, 0, 0, 0.06);
+  width: 100%;
+  grid-column: auto / span 1;
+}
+
+.vertical-menu {
+  grid-area: sidebar;
+  grid-column: 1 / 2;
+  height: 100%;
+  width: 1fr;
+  position: absolute;
+  background: rgb(252, 196, 70);
+  background: radial-gradient(
+    circle,
+    rgba(252, 196, 70, 1) 0%,
+    rgba(251, 127, 63, 1) 110%
+  );
+  overflow-x: hidden;
+
+  input[type='radio'] {
+    display: block;
+    padding: 12px;
+  }
 }
