--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -1,8 +1,3 @@
-// div {
-//   color: #51a87d;
-//   transform: translate(10px, 10px);
-// }
-
 body {
   padding: 0px;
   margin: 0px;
@@ -20,7 +15,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding: 20px;
-  grid-gap: 5px;
+  grid-gap: 10px;
 
   :first-child {
     grid-area: 1 / 1 / 3 / 3;
@@ -34,6 +29,10 @@ body {
   box-shadow: -1px 0px 0px rgba(0, 0, 0, 0.06);
   width: 100%;
   grid-column: auto / span 1;
+
+  img {
+    width: inherit;
+  }
 }
 
 .vertical-menu {
@@ -53,5 +52,31 @@ body {
   input[type='radio'] {
     display: block;
     padding: 12px;
+    visibility: hidden;
+
+    &:checked + label {
+      background-color: rgb(243, 205, 116);
+      border-radius: 10px 0px 0px 10px;
+    }
+  }
+
+  label {
+    display: block;
+    padding-left: 5px;
+    cursor: pointer;
+    &:hover {
+      box-shadow: 1px 1px #333;
+      border-radius: 10px;
+    }
+  }
+
+  .language {
+    position: absolute;
+    bottom: 10px;
+    margin-left: 10px;
+  }
+
+  .search {
+    border-radius: 15px;
   }
 }
